--- a/afapipe.cabal
+++ b/afapipe.cabal
@@ -18,6 +18,7 @@ build-type: Custom
 
 library
   exposed-modules:
+    Afa.PrettyFileIO
     Afa.FileIO
     Afa.ToDot
   autogen-modules:
@@ -38,6 +39,10 @@ library
     array ^>= 0.5.4.0,
     mtl ^>= 2.2.2,
     interpolatedstring-perl6 ^>= 1.0.2,
+    parsec ^>= 3.1.14.0,
+    composition ^>= 1.0.2.1,
+    recursion-schemes ^>= 5.1.3,
+    containers ^>= 0.6.2.1,
   hs-source-dirs:      src/hs
   default-language:    Haskell2010
 
