--- a/afapipe.cabal
+++ b/afapipe.cabal
@@ -23,10 +23,12 @@ library
     Afa.ToDot
   autogen-modules:
     Capnp.Gen.ById.Xf7c01c6f70140b00
+    Capnp.Gen.ById.Xf7c01c6f70140b00.Pure
     Capnp.Gen.Schema.Afa
     Capnp.Gen.Schema.Afa.Pure
   other-modules:
     Capnp.Gen.ById.Xf7c01c6f70140b00
+    Capnp.Gen.ById.Xf7c01c6f70140b00.Pure
     Capnp.Gen.Schema.Afa
     Capnp.Gen.Schema.Afa.Pure
   build-tool-depends:
