c++ lib with capnpc generated files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,34 @@
 cmake_minimum_required(VERSION 3.17)
 
 project(
-  afapipe
+  automata-safa-capnp
   VERSION 0.1.0
-  DESCRIPTION "Cooperation of various alternating finite automaton tools"
+  DESCRIPTION "Remote procedure call schema for symbolic alternating finite automata"
   LANGUAGES CXX
 )
 
 find_package(CapnProto CONFIG REQUIRED)
 
 set(CAPNPC_SRC_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/schema" CACHE STRING "" FORCE)
-set(CAPNPC_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/afa_schema/schema" CACHE STRING "" FORCE)
+set(CAPNPC_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/gensrc" CACHE STRING "" FORCE)
 file(MAKE_DIRECTORY "${CAPNPC_OUTPUT_DIR}")
 
-capnp_generate_cpp(afaSources afaHeaders schema/afa.capnp)
-
-add_executable(
-  store_little
-  src/cpp/afapipe/gen_little/store.cpp
-  src/cpp/afapipe/gen_little/gen.cpp
-  ${afaSources}
+capnp_generate_cpp(
+  afaSources afaHeaders
+  schema/Afa.capnp schema/CnfAfa.capnp schema/SeparatedAfa.capnp
 )
-target_link_libraries(store_little PRIVATE CapnProto::capnp)
-target_include_directories(store_little PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/afa_schema")
-set_property(TARGET store_little PROPERTY CXX_STANDARD 17)
+
+add_library(automata-safa-capnp ${afaSources})
+target_link_libraries(automata-safa-capnp PUBLIC CapnProto::capnp)
+set_target_properties(
+  automata-safa-capnp
+  PROPERTIES
+  CXX_STANDARD 17
+  PUBLIC_HEADER "${afaHeaders}"
+)
+
+include(GNUInstallDirs)
+install(
+  TARGETS automata-safa-capnp
+  PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/automata-safa-capnp"
+)
