--- a/automata-safa-capnp.cabal
+++ b/automata-safa-capnp.cabal
@@ -19,6 +19,7 @@ extra-source-files:
   schema/LoadedModelRpc.capnp,
   schema/SeparatedAfa.capnp,
   schema/SeparatedAfaRpc.capnp,
+  schema/MultisolverRpc.capnp,
 build-type: Custom
 
 library
@@ -52,6 +53,11 @@ library
     Capnp.Gen.ById.Xd9f6247af5f364df.Pure
     Capnp.Gen.Schema.SeparatedAfaRpc
     Capnp.Gen.Schema.SeparatedAfaRpc.Pure
+
+    Capnp.Gen.ById.Xb0d121e2f199f8c9
+    Capnp.Gen.ById.Xb0d121e2f199f8c9.Pure
+    Capnp.Gen.Schema.MultisolverRpc
+    Capnp.Gen.Schema.MultisolverRpc.Pure
   autogen-modules:
     Capnp.Gen.ById.Xf7c01c6f70140b00
     Capnp.Gen.ById.Xf7c01c6f70140b00.Pure
@@ -82,6 +88,11 @@ library
     Capnp.Gen.ById.Xd9f6247af5f364df.Pure
     Capnp.Gen.Schema.SeparatedAfaRpc
     Capnp.Gen.Schema.SeparatedAfaRpc.Pure
+
+    Capnp.Gen.ById.Xb0d121e2f199f8c9
+    Capnp.Gen.ById.Xb0d121e2f199f8c9.Pure
+    Capnp.Gen.Schema.MultisolverRpc
+    Capnp.Gen.Schema.MultisolverRpc.Pure
   build-tool-depends:
     capnp:capnpc-haskell ^>= 0.6.0.0,
   build-depends:
