haskell + c++ (except multisolver): refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,20 +9,18 @@ project(
 
 find_package(CapnProto CONFIG REQUIRED)
 
-set(CAPNPC_SRC_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/schema" CACHE STRING "" FORCE)
-set(CAPNPC_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/gensrc" CACHE STRING "" FORCE)
+set(CAPNPC_SRC_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/schema/Afa" CACHE STRING "" FORCE)
+set(CAPNPC_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/gensrc/automata-safa-capnp" CACHE STRING "" FORCE)
 file(MAKE_DIRECTORY "${CAPNPC_OUTPUT_DIR}")
 
 capnp_generate_cpp(
   afaSources afaHeaders
-  schema/Afa.capnp
-  schema/CnfAfa.capnp
-  schema/SeparatedAfa.capnp
-  schema/LoadedModelRpc.capnp
-  schema/CnfAfaRpc.capnp
-  schema/SeparatedAfaRpc.capnp
-  schema/DummyModelCheckerRpc.capnp
-  schema/MultisolverRpc.capnp
+  schema/Afa/Model/Succinct.capnp
+  schema/Afa/Model/Term.capnp
+  schema/Afa/Model/CnfAfa.capnp
+  schema/Afa/Model/Separated.capnp
+  schema/Afa/Rpc/ModelChecker.capnp
+  schema/Afa/Rpc/ModelCheckers.capnp
 )
 
 add_library(automata-safa-capnp ${afaSources})
@@ -31,17 +29,18 @@ set_target_properties(
   automata-safa-capnp
   PROPERTIES
   CXX_STANDARD 17
-  PUBLIC_HEADER "${afaHeaders}"
 )
 
 include(GNUInstallDirs)
+install(TARGETS automata-safa-capnp)
 install(
-  TARGETS automata-safa-capnp
-  PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/automata-safa-capnp"
+  DIRECTORY "${CMAKE_BINARY_DIR}/gensrc/"
+  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+  FILES_MATCHING PATTERN "*.h"
 )
 
 add_executable(dummy-model-checker src/dummy_model_checker.c++)
-target_include_directories(dummy-model-checker PRIVATE "${CAPNPC_OUTPUT_DIR}")
+target_include_directories(dummy-model-checker PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
 target_link_libraries(
   dummy-model-checker
   PRIVATE
@@ -52,7 +51,7 @@ target_link_libraries(
 set_target_properties(dummy-model-checker PROPERTIES CXX_STANDARD 17)
 
 add_executable(dummy-model-checker-client src/dummy_model_checker_client.c++)
-target_include_directories(dummy-model-checker-client PRIVATE "${CAPNPC_OUTPUT_DIR}")
+target_include_directories(dummy-model-checker-client PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
 target_link_libraries(
   dummy-model-checker-client
   PRIVATE
@@ -62,19 +61,19 @@ target_link_libraries(
 )
 set_target_properties(dummy-model-checker-client PROPERTIES CXX_STANDARD 17)
 
-add_executable(multisolver src/multisolver.c++)
-target_include_directories(multisolver PRIVATE "${CAPNPC_OUTPUT_DIR}")
-target_link_libraries(
-  multisolver
-  PRIVATE
-  CapnProto::capnp
-  CapnProto::capnp-rpc
-  automata-safa-capnp
-)
-set_target_properties(multisolver PROPERTIES CXX_STANDARD 17)
+# add_executable(multisolver src/multisolver.c++)
+# target_include_directories(multisolver PRIVATE "${CAPNPC_OUTPUT_DIR}")
+# target_link_libraries(
+#   multisolver
+#   PRIVATE
+#   CapnProto::capnp
+#   CapnProto::capnp-rpc
+#   automata-safa-capnp
+# )
+# set_target_properties(multisolver PROPERTIES CXX_STANDARD 17)
 
 add_executable(file-solver src/file-solver.c++)
-target_include_directories(file-solver PRIVATE "${CAPNPC_OUTPUT_DIR}")
+target_include_directories(file-solver PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
 target_link_libraries(
   file-solver
   PRIVATE
