--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,16 +61,16 @@ target_link_libraries(
 )
 set_target_properties(dummy-model-checker-client PROPERTIES CXX_STANDARD 17)
 
-# add_executable(multisolver src/multisolver.c++)
-# target_include_directories(multisolver PRIVATE "${CAPNPC_OUTPUT_DIR}")
-# target_link_libraries(
-#   multisolver
-#   PRIVATE
-#   CapnProto::capnp
-#   CapnProto::capnp-rpc
-#   automata-safa-capnp
-# )
-# set_target_properties(multisolver PROPERTIES CXX_STANDARD 17)
+add_executable(multisolver src/multisolver.c++)
+target_include_directories(multisolver PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
+target_link_libraries(
+  multisolver
+  PRIVATE
+  CapnProto::capnp
+  CapnProto::capnp-rpc
+  automata-safa-capnp
+)
+set_target_properties(multisolver PROPERTIES CXX_STANDARD 17)
 
 add_executable(file-solver src/file-solver.c++)
 target_include_directories(file-solver PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
