fix C++ and Java build, changing header paths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(
 
 find_package(CapnProto CONFIG REQUIRED)
 
-set(CAPNPC_SRC_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/schema/Afa" CACHE STRING "" FORCE)
+set(CAPNPC_SRC_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/schema" CACHE STRING "" FORCE)
 set(CAPNPC_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/gensrc/automata-safa-capnp" CACHE STRING "" FORCE)
 file(MAKE_DIRECTORY "${CAPNPC_OUTPUT_DIR}")
 
