CnfAfa: pureVars and upwardClauses

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,56 +40,56 @@ install(
   FILES_MATCHING PATTERN "*.h"
 )
 
-add_executable(dummy-model-checker src/dummy_model_checker.c++)
-target_include_directories(dummy-model-checker PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
-target_link_libraries(
-  dummy-model-checker
-  PRIVATE
-  CapnProto::capnp
-  CapnProto::capnp-rpc
-  automata-safa-capnp
-)
-set_target_properties(dummy-model-checker PROPERTIES CXX_STANDARD 17)
-
-add_executable(dummy-model-checker-client src/dummy_model_checker_client.c++)
-target_include_directories(dummy-model-checker-client PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
-target_link_libraries(
-  dummy-model-checker-client
-  PRIVATE
-  CapnProto::capnp
-  CapnProto::capnp-rpc
-  automata-safa-capnp
-)
-set_target_properties(dummy-model-checker-client PROPERTIES CXX_STANDARD 17)
-
-add_executable(multisolver src/multisolver.c++)
-target_include_directories(multisolver PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
-target_link_libraries(
-  multisolver
-  PRIVATE
-  CapnProto::capnp
-  CapnProto::capnp-rpc
-  automata-safa-capnp
-)
-set_target_properties(multisolver PROPERTIES CXX_STANDARD 17)
-
-add_executable(file-solver src/file-solver.c++)
-target_include_directories(file-solver PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
-target_link_libraries(
-  file-solver
-  PRIVATE
-  CapnProto::capnp
-  CapnProto::capnp-rpc
-  automata-safa-capnp
-)
-set_target_properties(file-solver PROPERTIES CXX_STANDARD 17)
-
-add_executable(list-builder src/list-builder.c++)
-target_include_directories(list-builder PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
-target_link_libraries(
-  list-builder
-  PRIVATE
-  CapnProto::capnp
-  automata-safa-capnp
-)
-set_target_properties(file-solver PROPERTIES CXX_STANDARD 17)
+# add_executable(dummy-model-checker src/dummy_model_checker.c++)
+# target_include_directories(dummy-model-checker PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
+# target_link_libraries(
+#   dummy-model-checker
+#   PRIVATE
+#   CapnProto::capnp
+#   CapnProto::capnp-rpc
+#   automata-safa-capnp
+# )
+# set_target_properties(dummy-model-checker PROPERTIES CXX_STANDARD 17)
+# 
+# add_executable(dummy-model-checker-client src/dummy_model_checker_client.c++)
+# target_include_directories(dummy-model-checker-client PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
+# target_link_libraries(
+#   dummy-model-checker-client
+#   PRIVATE
+#   CapnProto::capnp
+#   CapnProto::capnp-rpc
+#   automata-safa-capnp
+# )
+# set_target_properties(dummy-model-checker-client PROPERTIES CXX_STANDARD 17)
+# 
+# add_executable(multisolver src/multisolver.c++)
+# target_include_directories(multisolver PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
+# target_link_libraries(
+#   multisolver
+#   PRIVATE
+#   CapnProto::capnp
+#   CapnProto::capnp-rpc
+#   automata-safa-capnp
+# )
+# set_target_properties(multisolver PROPERTIES CXX_STANDARD 17)
+# 
+# add_executable(file-solver src/file-solver.c++)
+# target_include_directories(file-solver PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
+# target_link_libraries(
+#   file-solver
+#   PRIVATE
+#   CapnProto::capnp
+#   CapnProto::capnp-rpc
+#   automata-safa-capnp
+# )
+# set_target_properties(file-solver PROPERTIES CXX_STANDARD 17)
+# 
+# add_executable(list-builder src/list-builder.c++)
+# target_include_directories(list-builder PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/gensrc")
+# target_link_libraries(
+#   list-builder
+#   PRIVATE
+#   CapnProto::capnp
+#   automata-safa-capnp
+# )
+# set_target_properties(file-solver PROPERTIES CXX_STANDARD 17)
